<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_weight="1">
   <LinearLayout android:id="@+id/linearLayout"
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      android:orientation="vertical" android:padding="5dp">

      <EditText android:id="@+id/studentIDEditText"
         android:layout_width="match_parent"
         android:layout_height="wrap_content" 
         android:imeOptions="actionNext" android:hint="@string/StudentID"
         android:inputType="number"></EditText>

      <EditText android:id="@+id/quiz1EditText"
         android:layout_width="match_parent" 
         android:layout_height="wrap_content" 
         android:imeOptions="actionNext" android:hint="@string/Quiz1"
         android:inputType="number"></EditText>

      <EditText android:id="@+id/quiz2EditText"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:imeOptions="actionNext" android:hint="@string/Quiz2"
          android:inputType="number"></EditText>

      <EditText android:id="@+id/quiz3EditText"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:imeOptions="actionNext" android:hint="@string/Quiz3"
          android:inputType="number"></EditText>

      <EditText android:id="@+id/quiz4EditText"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:imeOptions="actionNext" android:hint="@string/Quiz4"
          android:inputType="number"></EditText>

      <EditText android:id="@+id/quiz5EditText"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:imeOptions="actionNext" android:hint="@string/Quiz5"
          android:inputType="number"></EditText>

      <Button android:id="@+id/saveStudentButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="15dp"
         android:layout_gravity="center_horizontal"
         android:text="@string/button_save_student"></Button>

       <fragment
           android:name="assignment3.jcnelson.parta.Util.ShowStatsFragment"
           android:id="@+id/showStatsFragment"
           android:layout_width="fill_parent"
           android:layout_height="50dp"
           tools:layout="@layout/fragment_show_stats" />

   </LinearLayout>
</ScrollView>